  `?citeL` for more details.

* Conversion functions: `md2docx`, `md2pdf`, `tex2html`, `html2pdf`, `tex2docx`, 
  `md2tex` have been added for a convenient way to convert an .md file to .docx.

* `rdirs` reclusively creates multiple directories.

* The sync family of functions has been introduced.  These functions provide 
  quick syncing between directories.  See `?sync` for more details.


MINOR FEATURES

* `notes` is a function that allows the user to view a truncated version of the 
  notes located in the ARTICLES directory.

* `BV` a function, bibliography viewer, that allows the user to view their 
  bibiliographs stored in the .bib file.

* A new template `wordpress_web` has been added.

* `SC` a function to quickly generate special HTML characters.

* `PN` a function to quickly add presenter notes to an HTML slide.

* `HR`, `HR2` `BT` and `EM` functions for quick html hyperrefs, button hyperrefs 
  and email hyperrefs..

* spacing functions `HS` (horizontal space) and `VS` (vertical space) have been 
  added.

* `CN` a new function that wraps text with courier new HTML a font tag for 
  supplied text.

* `WP` a convenience function for formulating Windows paths correctly.

IMPROVEMENTS

* `GQ`, `CA`, `LL` and `US` parse out both "fi" and "fl" ligatures more 
  effectively, whereas previously "fi" was assumed if a ligature was detected.

* `new_report` now allows global options to be set that allows numeric values to 
  be passed to the template option like speed dial. See ?new_report for more.

* The reports package now has a staticdocs generated help site: 
  http://trinker.github.io/reports/
  
* The reports package now has a related programs/packages help site: 
  http://trinker.github.io/reports/dependencies

* reports gains an HTML vignette (with video explanations) to better explain 
  package use.  Use `browseVignettes(package = 'reports')` to view the vignette.

CHANGES
