@@ -5,6 +5,7 @@ export(CA)
 export(citeL)
 export(CN)
 export(col2hex)
+export(custom_css)
 export(CW)
 export(delete)
 export(doc_temp)
